@@ -1,17 +1,4 @@
-#include <allegro5/allegro.h>
-#include <allegro5/allegro_font.h>
-#include <allegro5/allegro_primitives.h>
-#include <allegro5/allegro_ttf.h>
-#include <allegro5/allegro_image.h>
-#include <allegro5/allegro_audio.h> 
-#include <allegro5/allegro_acodec.h>
-
-#include "login_screen.hpp"
-#include "register_screen.hpp"
-#include "player_list_screen.hpp"
-#include "remove_user_screen.hpp"
-#include "menu_audio.hpp"
-
+#include "menu.hpp"
 #include <iostream>
 
 // CONSTANTES PARA CONFIGURAÇÕES GERAIS DO JOGO
@@ -74,15 +61,10 @@ int main(int argc, char **argv) {
         system("pause");
         return 3;
     }
-
-    // Seta o título da janela
-    al_set_window_title(display, "Flappy Bird - Cadastro/Login");
     
     al_install_audio(); // instala subsistema de áudio
     al_init_acodec_addon(); // codecs (WAV)
     al_reserve_samples(4); // quantos sons simultâneos podem tocar
-    ALLEGRO_SAMPLE* sample_button = al_load_sample("assets/audio/button_press.wav");
-    ALLEGRO_SAMPLE* sample_key = al_load_sample("assets/audio/keyboard_key.wav"); 
 
     // REGISTRO DA ORIGEM DOS EVENTOS NA FILA DE EVENTOS
     al_register_event_source(queue, al_get_display_event_source(display));  // Eventos do display
@@ -90,166 +72,42 @@ int main(int argc, char **argv) {
     al_register_event_source(queue, al_get_keyboard_event_source());        // Eventos do teclado
     al_register_event_source(queue, al_get_mouse_event_source());           // Eventos do mouse
 
-    // Carrega background do menu
-    ALLEGRO_BITMAP* background_menu = al_load_bitmap("assets/scenario/background_login.png");
-
-    // Carrega imagem da coroa do leaderboard
-    ALLEGRO_BITMAP *crown = al_load_bitmap("assets/UI/crown-2.png");
-
-    // Carrega ícones do botão de áudio
-    ALLEGRO_BITMAP *ico_on = al_load_bitmap("assets/UI/sound_on.png");
-    ALLEGRO_BITMAP *ico_off = al_load_bitmap("assets/UI/sound_off.png");
-    ALLEGRO_BITMAP *ico_on_press = al_load_bitmap("assets/UI/sound_on_pressed.png");
-    ALLEGRO_BITMAP *ico_off_press = al_load_bitmap("assets/UI/sound_off_pressed.png");
-
-    // Incializa objeto que controla o áudio do menu
-    menu_audio audio_ctrl(ico_on,ico_off,ico_on_press,ico_off_press,sample_key,sample_button,40, 40, al_get_bitmap_width(ico_on), al_get_bitmap_height(ico_on));
-
     // Inicia objeto que manipula os arquivos
     registration data("jogadores.txt");
-    std::multiset<player> players = data.get_all();
-
-    // Inicializa as telas da interface
-    login_screen login_scr(SCREEN_W, SCREEN_H, data, sample_key, sample_button);
-    register_screen register_scr(SCREEN_W, SCREEN_H, data, players, sample_key, sample_button);
-    player_list_screen list_scr(SCREEN_W, SCREEN_H, sample_button, crown, players, data);
-    remove_user_screen rm_scr(SCREEN_W, SCREEN_H, data, players,sample_key, sample_button);
-
-    enum screen_type { SCREEN_LOGIN, SCREEN_REGISTER, SCREEN_LIST, SCREEN_REMOVE };
-    
-    // Carrega a fonte utilizada
-    ALLEGRO_FONT *pixel_sans = al_load_ttf_font("assets/fonts/pixelify_sans.ttf", 20, 0);
-
-    al_start_timer(timer);
-
+   
+    // Variável que controla a condição do programa estar aberto
     bool is_open = true;
 
+    // Declara o menu principal
+    menu main_menu (SCREEN_W, SCREEN_H, data);
+
+    // Inicia o timer
+    al_start_timer(timer);
+
     while(is_open){
-        screen_type current = SCREEN_LOGIN;
-        login_scr.reset();
-        register_scr.reset();
-        list_scr.reset();
-        rm_scr.reset();
-        while(!login_scr.login_done()){
+        // Reseta o menu para poder ser reutilizado
+        main_menu.reset();
+        while(!main_menu.is_login_done() && is_open){
+            // Seta o título da janela
+            al_set_window_title(display, "Flappy Bird - Cadastro/Login");
+
             al_wait_for_event(queue, &event);
 
+            // Fechar o display encerra o loop
             if (event.type == ALLEGRO_EVENT_DISPLAY_CLOSE) {
                 is_open = false;
                 break;
             }
-
-            // Encaminha evento de acordo com a tela atual
-            if (current == SCREEN_LOGIN) {
-                // ESC no menu fecha o programa
-                if (event.type == ALLEGRO_EVENT_KEY_UP && event.keyboard.keycode == ALLEGRO_KEY_ESCAPE) {
-                    is_open = false;
-                    break;
-                }
-                login_scr.handle_event(event);
-
-                // Se usuário clicou em "Registrar" → vai para tela de registro
-                if (login_scr.go_to_register_screen()) {
-                    current = SCREEN_REGISTER;
-                    login_scr.reset();
-                }
-                // Se usuário clicou em "Ver Jogadores" → vai para tela de listagem
-                else if (login_scr.go_to_player_list()) {
-                    current = SCREEN_LIST;
-                    login_scr.reset();
-                }
-                // Se usuário clicou em "Remover Usuário" → vai para tela de remoção de jogador
-                else if (login_scr.go_to_remove_screen()) {
-                    current = SCREEN_REMOVE;
-                    login_scr.reset();
-                }
-                
-                // Atualiza fontes de audio e posição do botão de mute
-                audio_ctrl.set_sources(login_scr.get_text_boxes(),login_scr.get_buttons());
-                audio_ctrl.set_position(40,40);
-            }
-            else if (current == SCREEN_REGISTER) {
-                register_scr.handle_event(event);
-
-               // Se registrou com sucesso → volta ao login
-                if (register_scr.registration_complete()) {
-                    register_scr.reset();
-                    current = SCREEN_LOGIN;
-                }
-                // Se clicou em "Cancelar" → volta ao login
-                else if (register_scr.go_to_login_screen()) {
-                    register_scr.reset();
-                    current = SCREEN_LOGIN;
-                }
-
-                // Atualiza fontes de audio e posição do botão de mute
-                audio_ctrl.set_sources(register_scr.get_text_boxes(),register_scr.get_buttons());
-                audio_ctrl.set_position(40,40);
-            } 
-            else if (current == SCREEN_LIST) {
-                list_scr.handle_event(event);
-
-                // Se clicou em "Menu" → volta ao login
-                if (list_scr.go_to_main_menu()) {
-                    list_scr.reset();
-                    current = SCREEN_LOGIN;
-                }
-                // Atualiza fontes de audio e posição do botão de mute
-                std::vector<text_box*> null = {}; // Tela de listagem não possui caixas de texto
-                audio_ctrl.set_sources(null,list_scr.get_buttons());
-                audio_ctrl.set_position(265,510);
-            }
-            else if (current == SCREEN_REMOVE) {
-                rm_scr.handle_event(event);
-
-                if (rm_scr.go_to_main_menu()) {
-                    rm_scr.reset();
-                    current = SCREEN_LOGIN;
-                }
-                // Atualiza fontes de audio e posição do botão de mute
-                audio_ctrl.set_sources(rm_scr.get_text_boxes(),rm_scr.get_buttons());
-                audio_ctrl.set_position(40,40);
-            }
             
-            // Manipula o áudio
-            audio_ctrl.handle_event(event);
+            // Menu lida com o evento ocorrido
+            main_menu.handle_event(event, is_open);
 
-            // A cada tick do timer, redesenha tudo
-            if (event.type == ALLEGRO_EVENT_TIMER) {
-                al_clear_to_color(al_map_rgb(0, 0, 0));
-                if (background_menu) {
-                    al_draw_scaled_bitmap(
-                        background_menu,
-                        0, 0, al_get_bitmap_width(background_menu), al_get_bitmap_height(background_menu),
-                        0, 0, SCREEN_W, SCREEN_H, 0
-                    );
-                }
-               // Desenho conforme a tela ativa
-                if (current == SCREEN_LOGIN) {
-                    login_scr.draw(pixel_sans);
-                }
-                else if (current == SCREEN_REGISTER) {
-                    register_scr.draw(pixel_sans);
-                }
-                else if (current == SCREEN_LIST) {
-                    list_scr.draw(pixel_sans);
-                }
-                else if (current == SCREEN_REMOVE) {
-                    rm_scr.draw(pixel_sans);
-                }
-                // Desenho do botão de mute
-                audio_ctrl.draw();
+            main_menu.draw(SCREEN_W, SCREEN_H, event);
 
-                al_flip_display(); 
             }
-        }
         is_open = false;
     }
     // Libera recursos
-    al_destroy_sample(sample_key);
-    al_destroy_sample(sample_button);
-    al_destroy_bitmap(background_menu);
-    al_destroy_bitmap(crown);
-    al_destroy_font(pixel_sans);
     al_destroy_timer(timer);
     al_destroy_event_queue(queue);
     al_destroy_display(display);
